// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edit Mode renders correctly 1`] = `
<form
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <Dialog
    confirmText="Save"
    confirmTranslationId="global.save"
    isOpen={true}
    onCancel={[MockFunction onCancel]}
    onConfirm={[MockFunction onConfirm]}
    shouldDisableAllButtons={false}
    title="Edit Address"
  >
    <FormError
      classes={
        Object {
          "root": "errorContainer",
        }
      }
      errors={Array []}
    />
    <div
      className="root"
    >
      <div
        className="firstname"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="firstname"
          >
            First Name
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="firstname"
                name="firstname"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="middlename"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="middlename"
          >
            Middle Name
            <span
              className="optional"
            >
              <mock-FormattedMessage
                defaultMessage="Optional"
                id="field.optional"
              />
            </span>
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="middlename"
                name="middlename"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="lastname"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="lastname"
          >
            Last Name
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="lastname"
                name="lastname"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="country"
      >
        <Country
          field="country_code"
          validate={[Function]}
        />
      </div>
      <div
        className="street1"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="street1"
          >
            Street Address
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="street[0]"
                name="street[0]"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="street2"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="street2"
          >
            Street Address 2
            <span
              className="optional"
            >
              <mock-FormattedMessage
                defaultMessage="Optional"
                id="field.optional"
              />
            </span>
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="street[1]"
                name="street[1]"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="city"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="city"
          >
            City
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="city"
                name="city"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="region"
      >
        <Region
          countryCodeField="country_code"
          fieldInput="region[region]"
          fieldSelect="region[region_id]"
          optionValueKey="id"
          validate={[Function]}
        />
      </div>
      <div
        className="postcode"
      >
        <Postcode
          validate={[Function]}
        />
      </div>
      <div
        className="telephone"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="telephone"
          >
            Phone Number
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="telephone"
                name="telephone"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="default_address_check"
      >
        <label
          className="root"
        >
          <input
            checked={false}
            className="input"
            id="00000000-0000-4000-8000-000000000000"
            name="default_shipping"
            onBlur={[Function]}
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="icon"
          >
            <svg
              fill="none"
              height={24}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                ry="2"
                width="18"
                x="3"
                y="3"
              />
            </svg>
          </span>
          <span
            className="label"
          >
            Make this my default address
          </span>
        </label>
        <p
          className="root"
        />
      </div>
    </div>
  </Dialog>
</form>
`;

exports[`Edit Mode renders correctly with errors 1`] = `
<form
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <Dialog
    confirmText="Save"
    confirmTranslationId="global.save"
    isOpen={true}
    onCancel={[MockFunction onCancel]}
    onConfirm={[MockFunction onConfirm]}
    shouldDisableAllButtons={false}
    title="Edit Address"
  >
    <FormError
      classes={
        Object {
          "root": "errorContainer",
        }
      }
      errors={
        Array [
          "Unit Test Error 1",
          "Unit Test Error 2",
        ]
      }
    />
    <div
      className="root"
    >
      <div
        className="firstname"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="firstname"
          >
            First Name
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="firstname"
                name="firstname"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="middlename"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="middlename"
          >
            Middle Name
            <span
              className="optional"
            >
              <mock-FormattedMessage
                defaultMessage="Optional"
                id="field.optional"
              />
            </span>
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="middlename"
                name="middlename"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="lastname"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="lastname"
          >
            Last Name
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="lastname"
                name="lastname"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="country"
      >
        <Country
          field="country_code"
          validate={[Function]}
        />
      </div>
      <div
        className="street1"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="street1"
          >
            Street Address
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="street[0]"
                name="street[0]"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="street2"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="street2"
          >
            Street Address 2
            <span
              className="optional"
            >
              <mock-FormattedMessage
                defaultMessage="Optional"
                id="field.optional"
              />
            </span>
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="street[1]"
                name="street[1]"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="city"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="city"
          >
            City
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="city"
                name="city"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="region"
      >
        <Region
          countryCodeField="country_code"
          fieldInput="region[region]"
          fieldSelect="region[region_id]"
          optionValueKey="id"
          validate={[Function]}
        />
      </div>
      <div
        className="postcode"
      >
        <Postcode
          validate={[Function]}
        />
      </div>
      <div
        className="telephone"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="telephone"
          >
            Phone Number
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="telephone"
                name="telephone"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="default_address_check"
      >
        <label
          className="root"
        >
          <input
            checked={false}
            className="input"
            id="00000000-0000-4000-8000-000000000000"
            name="default_shipping"
            onBlur={[Function]}
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="icon"
          >
            <svg
              fill="none"
              height={24}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                ry="2"
                width="18"
                x="3"
                y="3"
              />
            </svg>
          </span>
          <span
            className="label"
          >
            Make this my default address
          </span>
        </label>
        <p
          className="root"
        />
      </div>
    </div>
  </Dialog>
</form>
`;

exports[`renders correctly 1`] = `
<form
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <Dialog
    confirmText="Save"
    confirmTranslationId="global.save"
    isOpen={true}
    onCancel={[MockFunction onCancel]}
    onConfirm={[MockFunction onConfirm]}
    shouldDisableAllButtons={false}
    title="New Address"
  >
    <FormError
      classes={
        Object {
          "root": "errorContainer",
        }
      }
      errors={Array []}
    />
    <div
      className="root"
    >
      <div
        className="firstname"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="firstname"
          >
            First Name
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="firstname"
                name="firstname"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="middlename"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="middlename"
          >
            Middle Name
            <span
              className="optional"
            >
              <mock-FormattedMessage
                defaultMessage="Optional"
                id="field.optional"
              />
            </span>
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="middlename"
                name="middlename"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="lastname"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="lastname"
          >
            Last Name
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="lastname"
                name="lastname"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="country"
      >
        <Country
          field="country_code"
          validate={[Function]}
        />
      </div>
      <div
        className="street1"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="street1"
          >
            Street Address
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="street[0]"
                name="street[0]"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="street2"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="street2"
          >
            Street Address 2
            <span
              className="optional"
            >
              <mock-FormattedMessage
                defaultMessage="Optional"
                id="field.optional"
              />
            </span>
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="street[1]"
                name="street[1]"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="city"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="city"
          >
            City
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="city"
                name="city"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="region"
      >
        <Region
          countryCodeField="country_code"
          fieldInput="region[region]"
          fieldSelect="region[region_id]"
          optionValueKey="id"
          validate={[Function]}
        />
      </div>
      <div
        className="postcode"
      >
        <Postcode
          validate={[Function]}
        />
      </div>
      <div
        className="telephone"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="telephone"
          >
            Phone Number
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="telephone"
                name="telephone"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="default_address_check"
      >
        <label
          className="root"
        >
          <input
            checked={false}
            className="input"
            id="00000000-0000-4000-8000-000000000000"
            name="default_shipping"
            onBlur={[Function]}
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="icon"
          >
            <svg
              fill="none"
              height={24}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                ry="2"
                width="18"
                x="3"
                y="3"
              />
            </svg>
          </span>
          <span
            className="label"
          >
            Make this my default address
          </span>
        </label>
        <p
          className="root"
        />
      </div>
    </div>
  </Dialog>
</form>
`;

exports[`renders correctly with errors 1`] = `
<form
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <Dialog
    confirmText="Save"
    confirmTranslationId="global.save"
    isOpen={true}
    onCancel={[MockFunction onCancel]}
    onConfirm={[MockFunction onConfirm]}
    shouldDisableAllButtons={false}
    title="New Address"
  >
    <FormError
      classes={
        Object {
          "root": "errorContainer",
        }
      }
      errors={
        Array [
          "Unit Test Error 1",
          "Unit Test Error 2",
        ]
      }
    />
    <div
      className="root"
    >
      <div
        className="firstname"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="firstname"
          >
            First Name
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="firstname"
                name="firstname"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="middlename"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="middlename"
          >
            Middle Name
            <span
              className="optional"
            >
              <mock-FormattedMessage
                defaultMessage="Optional"
                id="field.optional"
              />
            </span>
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="middlename"
                name="middlename"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="lastname"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="lastname"
          >
            Last Name
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="lastname"
                name="lastname"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="country"
      >
        <Country
          field="country_code"
          validate={[Function]}
        />
      </div>
      <div
        className="street1"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="street1"
          >
            Street Address
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="street[0]"
                name="street[0]"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="street2"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="street2"
          >
            Street Address 2
            <span
              className="optional"
            >
              <mock-FormattedMessage
                defaultMessage="Optional"
                id="field.optional"
              />
            </span>
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="street[1]"
                name="street[1]"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="city"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="city"
          >
            City
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="city"
                name="city"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="region"
      >
        <Region
          countryCodeField="country_code"
          fieldInput="region[region]"
          fieldSelect="region[region_id]"
          optionValueKey="id"
          validate={[Function]}
        />
      </div>
      <div
        className="postcode"
      >
        <Postcode
          validate={[Function]}
        />
      </div>
      <div
        className="telephone"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="telephone"
          >
            Phone Number
          </label>
          <span
            className="root"
            style={
              Object {
                "--iconsAfter": 0,
                "--iconsBefore": 0,
              }
            }
          >
            <span
              className="input"
            >
              <input
                className="input"
                id="telephone"
                name="telephone"
                onBlur={[Function]}
                onChange={[Function]}
                value=""
              />
            </span>
            <span
              className="before"
            />
            <span
              aria-hidden="false"
              className="after"
            />
          </span>
          <p
            className="root"
          />
        </div>
      </div>
      <div
        className="default_address_check"
      >
        <label
          className="root"
        >
          <input
            checked={false}
            className="input"
            id="00000000-0000-4000-8000-000000000000"
            name="default_shipping"
            onBlur={[Function]}
            onChange={[Function]}
            type="checkbox"
          />
          <span
            className="icon"
          >
            <svg
              fill="none"
              height={24}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                ry="2"
                width="18"
                x="3"
                y="3"
              />
            </svg>
          </span>
          <span
            className="label"
          >
            Make this my default address
          </span>
        </label>
        <p
          className="root"
        />
      </div>
    </div>
  </Dialog>
</form>
`;
